<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersionalInfoActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:src="@drawable/bg"
        android:scaleType="fitXY"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/bgImage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="49dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="@font/poppins_semi_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup"
            android:textColor="@color/white"
            android:layout_marginTop="-20dp"
            android:textSize="30sp"
            android:layout_marginStart="19dp"
            android:fontFamily="@font/poppins_regular"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:text="@string/personal_information"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:textColor="@color/primary"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/star"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:hint="@string/enter_your_name"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:maxLength="20"
            android:textSize="15sp"
            android:padding="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:text="@string/star"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:hint="@string/num_hint"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:padding="10dp"
            android:maxLength="11"
            android:inputType="number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/star"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:hint="@string/example_gmail_com"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:maxLength="20"
            android:textSize="15sp"
            android:padding="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/star"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_date"
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:padding="10dp"
            android:focusable="false"
            android:clickable="true" />

        <Button
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:id="@+id/submitButton"
            android:text="@string/submit"
            android:fontFamily="@font/poppins_semi_bold"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="5dp"
            />

        <Button
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:background="@drawable/button_border"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="5dp" />


    </LinearLayout>

</RelativeLayout>
