<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessInfoActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:src="@drawable/bg"
        android:scaleType="fitXY"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/bgImage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="49dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_business" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="@font/poppins_semi_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infomation"
            android:textColor="@color/white"
            android:layout_marginTop="-20dp"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_name"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:text="@string/star"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:hint="@string/enter_your_shop_name"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_address"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="113dp"
                android:text="@string/star"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:hint="@string/address_hint"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm_ref_no"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:text="@string/star"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:hint="@string/rm_ref_hint"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:text="@string/star"
                    android:textColor="@color/red"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="182dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="38dp"
                    android:text="@string/star"
                    android:textColor="@color/red"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/cityDropdown"
                android:layout_width="163dp"
                android:layout_height="40dp"
                android:background="@drawable/edittext_border"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/areaDropdown"
                android:layout_width="163dp"
                android:layout_height="40dp"
                android:layout_marginStart="182dp"
                android:background="@drawable/edittext_border"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:padding="10dp" />

        </RelativeLayout>

        <Button
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:id="@+id/submitButton"
            android:text="@string/submit"
            android:fontFamily="@font/poppins_semi_bold"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="5dp" />

        <Button
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:id="@+id/cancelButton"
            android:text="@string/previous"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:background="@drawable/button_border"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="5dp" />


    </LinearLayout>

</RelativeLayout>
